--- a/delivery-market/src/main/resources/templates/good/category.html
+++ b/delivery-market/src/main/resources/templates/good/category.html
@@ -5,26 +5,189 @@
 <div th:replace="~{/fragments/navbars :: navbars}"></div>
 <div th:replace="~{/fragments/good-sidebar :: sidebar}"></div>
 <div class="left-margin-content-area">
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div th:each="good: ${goods}">
-            <div class="col border-light">
-                <div class="card" th:id="${good.id}" style="cursor: pointer">
-                    <img th:src="|/api/goods/images/${good.photo}|" class="card-img-top" alt="..." height="334.688px" width="260px">
-                    <div class="card-body">
-                        <div class="row">
-                            <p class="mb-0" th:text="${good.name}"></p>
-                            <p class="fw-light" th:text="${good.summary}"></p>
-                            <p th:if="${good.discountPrice == null}" class="fw-bolder" th:text="${good.price} + 원"></p>
-                            <div th:if="${good.discountPrice != null}">
-                                <p th:if="${good.discountPrice != null}" class="fw-lighter mb-0 text-decoration-line-through" th:text="${good.price} + 원"></p>
-                                <p th:if="${good.discountPrice != null}" class="fw-bolder">
-                                    <span style="color: rgb(250, 98, 47);" th:text="${good.discountPercent} + '%'"></span>
-                                    <span> </span>
-                                    <span th:text="${good.discountPrice + '원'}"></span>
-                                </p>
-                            </div>
-                        </div>
+    <div class="row row-cols-1 row-cols-md-4 g-4" id="good-list">
+        <div class="col border-light place-holder-area">
+            <div class="card" aria-hidden="true">
+                <img class="card-img-top" height="334.688px" width="260px" hidden="hidden">
+                <svg class="bd-placeholder-img card-img-top" height="334.688px" width="260px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                </svg>
+                <div class="card-body" hidden="hidden">
+                    <div class="h5 card-title mb-0">
+                        <span class="good-title"></span>
                     </div>
+                    <p class="card-text">
+                        <span class="small text-body-secondary good-summary"></span>
+                    </p>
+                    <p class="card-text good-price-area">
+                        <span class="fw-bolder good-price"></span>
+                    </p>
+                    <p class="card-text good-discount-price-area">
+                        <span class="price mb-0 text-decoration-line-through good-price" style="color: gray"></span>
+                        <br>
+                        <span class="fw-bolder good-discount-percent" style="color: rgb(250, 98, 47);"></span>
+                        <span class="fw-bolder good-discount-price"></span>
+                    </p>
+                </div>
+                <div class="card-body">
+                    <div class="h5 card-title placeholder-glow">
+                        <span class="placeholder col-6"></span>
+                    </div>
+                    <p class="card-text placeholder-glow">
+                        <span class="placeholder col-12"></span>
+                        <span class="placeholder col-4"></span>
+                        <br>
+                        <span class="placeholder col-7"></span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col border-light place-holder-area">
+            <div class="card" aria-hidden="true">
+                <img class="card-img-top" height="334.688px" width="260px" hidden="hidden">
+                <svg class="bd-placeholder-img card-img-top" height="334.688px" width="260px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                </svg>
+                <div class="card-body" hidden="hidden">
+                    <div class="h5 card-title mb-0">
+                        <span class="good-title"></span>
+                    </div>
+                    <p class="card-text">
+                        <span class="small text-body-secondary good-summary"></span>
+                    </p>
+                    <p class="card-text good-price-area">
+                        <span class="fw-bolder good-price"></span>
+                    </p>
+                    <p class="card-text good-discount-price-area">
+                        <span class="price mb-0 text-decoration-line-through good-price" style="color: gray"></span>
+                        <br>
+                        <span class="fw-bolder good-discount-percent" style="color: rgb(250, 98, 47);"></span>
+                        <span class="fw-bolder good-discount-price"></span>
+                    </p>
+                </div>
+                <div class="card-body">
+                    <div class="h5 card-title placeholder-glow">
+                        <span class="placeholder col-6"></span>
+                    </div>
+                    <p class="card-text placeholder-glow">
+                        <span class="placeholder col-12"></span>
+                        <span class="placeholder col-4"></span>
+                        <br>
+                        <span class="placeholder col-7"></span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col border-light place-holder-area">
+            <div class="card" aria-hidden="true">
+                <img class="card-img-top" height="334.688px" width="260px" hidden="hidden">
+                <svg class="bd-placeholder-img card-img-top" height="334.688px" width="260px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                </svg>
+                <div class="card-body" hidden="hidden">
+                    <div class="h5 card-title mb-0">
+                        <span class="good-title"></span>
+                    </div>
+                    <p class="card-text">
+                        <span class="small text-body-secondary good-summary"></span>
+                    </p>
+                    <p class="card-text good-price-area">
+                        <span class="fw-bolder good-price"></span>
+                    </p>
+                    <p class="card-text good-discount-price-area">
+                        <span class="price mb-0 text-decoration-line-through good-price" style="color: gray"></span>
+                        <br>
+                        <span class="fw-bolder good-discount-percent" style="color: rgb(250, 98, 47);"></span>
+                        <span class="fw-bolder good-discount-price"></span>
+                    </p>
+                </div>
+                <div class="card-body">
+                    <div class="h5 card-title placeholder-glow">
+                        <span class="placeholder col-6"></span>
+                    </div>
+                    <p class="card-text placeholder-glow">
+                        <span class="placeholder col-12"></span>
+                        <span class="placeholder col-4"></span>
+                        <br>
+                        <span class="placeholder col-7"></span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col border-light place-holder-area">
+            <div class="card" aria-hidden="true">
+                <img class="card-img-top" height="334.688px" width="260px" hidden="hidden">
+                <svg class="bd-placeholder-img card-img-top" height="334.688px" width="260px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                </svg>
+                <div class="card-body" hidden="hidden">
+                    <div class="h5 card-title mb-0">
+                        <span class="good-title"></span>
+                    </div>
+                    <p class="card-text">
+                        <span class="small text-body-secondary good-summary"></span>
+                    </p>
+                    <p class="card-text good-price-area">
+                        <span class="fw-bolder good-price"></span>
+                    </p>
+                    <p class="card-text good-discount-price-area">
+                        <span class="price mb-0 text-decoration-line-through good-price" style="color: gray"></span>
+                        <br>
+                        <span class="fw-bolder good-discount-percent" style="color: rgb(250, 98, 47);"></span>
+                        <span class="fw-bolder good-discount-price"></span>
+                    </p>
+                </div>
+                <div class="card-body">
+                    <div class="h5 card-title placeholder-glow">
+                        <span class="placeholder col-6"></span>
+                    </div>
+                    <p class="card-text placeholder-glow">
+                        <span class="placeholder col-12"></span>
+                        <span class="placeholder col-4"></span>
+                        <br>
+                        <span class="placeholder col-7"></span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col border-light place-holder-area">
+            <div class="card" aria-hidden="true">
+                <img class="card-img-top" height="334.688px" width="260px" hidden="hidden">
+                <svg class="bd-placeholder-img card-img-top" height="334.688px" width="260px" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                </svg>
+                <div class="card-body" hidden="hidden">
+                    <div class="h5 card-title mb-0">
+                        <span class="good-title"></span>
+                    </div>
+                    <p class="card-text">
+                        <span class="small text-body-secondary good-summary"></span>
+                    </p>
+                    <p class="card-text good-price-area">
+                        <span class="fw-bolder good-price"></span>
+                    </p>
+                    <p class="card-text good-discount-price-area">
+                        <span class="price mb-0 text-decoration-line-through good-price" style="color: gray"></span>
+                        <br>
+                        <span class="fw-bolder good-discount-percent" style="color: rgb(250, 98, 47);"></span>
+                        <span class="fw-bolder good-discount-price"></span>
+                    </p>
+                </div>
+                <div class="card-body">
+                    <div class="h5 card-title placeholder-glow">
+                        <span class="placeholder col-6"></span>
+                    </div>
+                    <p class="card-text placeholder-glow">
+                        <span class="placeholder col-12"></span>
+                        <span class="placeholder col-4"></span>
+                        <br>
+                        <span class="placeholder col-7"></span>
+                    </p>
                 </div>
             </div>
         </div>
@@ -33,19 +196,14 @@
         <nav id="pagination" aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 <li class="page-item">
-                    <a class="page-link" th:text="'previous'"
-                       th:href="@{/categories/{categoryId}/(page=${page.number - 1}, categoryId=${categoryId})}"
-                       th:class="'page-link' + (${page.number} <= 0 ? ' disabled' : '')"></a>
-                </li>
-                <li class="page-item" th:class="page-item" th:each="pageNumber : ${pages}">
-                    <a th:class="'page-link' + (${pageNumber} == ${page.number} ? ' disabled' : '')"
-                       th:text="${pageNumber + 1}"
-                       th:href="@{/categories/{categoryId}/(page=${pageNumber}, categoryId=${categoryId})}"></a>
+                    <a class="page-link previous-page" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" th:text="'next'"
-                       th:href="@{/categories/{categoryId}/(page=${page.number + 1}, categoryId=${categoryId})}"
-                       th:class="'page-link' + (${page.number} >= ${page.totalPages - 1} ? ' disabled' : '')"></a>
+                    <a class="page-link next-page" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
                 </li>
             </ul>
         </nav>
