--- a/delivery-market/src/main/resources/templates/good/good-detail.html
+++ b/delivery-market/src/main/resources/templates/good/good-detail.html
@@ -6,7 +6,6 @@
 <div class="content-area" style="margin-top: 100px">
     <div class="row" style="margin-left: 200px; margin-right: 200px">
         <div class="col-5">
-<!--            <img th:src="|/api/goods/images/${good.photo}|" class="card-img-top" alt="..." height="551.992px" width="430px">-->
             <img id="good-main-photo" class="card-img-top" alt="..." height="551.992px" width="430px">
         </div>
         <div class="col-7">
@@ -96,11 +95,7 @@
                     </h5>
                 </div>
                 <div class="col-2">
-                    <a type="button" class="btn btn-danger w-100">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"></path>
-                        </svg>
-                    </a>
+                    <a type="button" class="btn border w-100" id="btn-pick"></a>
                 </div>
                 <div class="col-5">
                     <a type="button" class="w-100 btn btn-warning">구매하기</a>
